# images2pdf-slides

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
src/images2pdf_slides/: __init__.py  cli.py  core.py
src/images_to_pdf/: __init__.py
